# star-wars-one-expert

./: README.md  main.py  pyproject.toml
qdrant/: meta.json
